final_submission_for deployment

--- a/rest-api-technotes/views/index.html
+++ b/rest-api-technotes/views/index.html
@@ -3,10 +3,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>TechNotes API</title>
+   <title>constructionNotes API</title>
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <h1>techNotes</h1>
+   <h1>ConstructionNotes</h1>
 </body>
 </html>
