--- a/technotes/src/App.css
+++ b/technotes/src/App.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
+/* 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 /* || VARIABLES */
 root {
